--- a/style/css/hm.css
+++ b/style/css/hm.css
@@ -1,156 +1,313 @@
 
 
+/* Top level logo strip. */
 
 #topBarContainer{
-    display: flex;
-    width: 100%;
-    height: 12%;
-    background-color: white;
-    position: fixed;
-    z-index: 3;
-}
-
-#topBar{
-    display: flex;
-    width: 100%;
-
-}
-
-
-#topBarLeft{
-    display: flex;
-    width: 40%;
-    justify-content: center;
-    align-items: center;
-}
-
-#logoImg{
-    width: 300px;
-}
-
-#topBarRight{
-    display: flex;
-    width: 100%;
+   display: flex;
     justify-content: end;
 }
 
-#infoContainer{
+#fixBar{
     display: flex;
-    padding-right: 50px;
-    justify-content: space-around;
+     width: 100%;
+     background-color: #181818;
+     border-bottom: 4px solid rgb(255, 255, 255);
+    justify-content: center;
+    max-height: 100px;
+ }
+ 
+
+#topBarPanel{
+    display: flex;
+    width: 95%;
+    justify-content: space-between;
 
 }
 
-#phoneCont{
+
+#logoImg{
+    min-height: 130px;
+}
+
+#topBarRight{
+    height: fit-content;
+    align-self: center;
+    align-items: center;
+    display: flex;
+    justify-content: end;
+    width: 80%;
+}
+
+#phoneContainer{
     display: flex;
     align-items: center;
-    padding-right: 50px;
-
-}
-
-#number{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    gap: 5%;
+    width: 30%;
+    height: fit-content;
 }
 
 #phoneImg{
-    width: 40px;
-    padding-right: 10px;
+    max-height: 30px;
+    filter: invert();
 }
 
-#adressCont{
+#adressContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+   justify-content: center;
 }
 
-.adress{
-    margin: 2px;
+#numberText{
+    color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-#panelStrip{
-display: flex;   
-flex-direction: column;
- background-color: hsla(231, 85%, 24%, 1);
-    height: 7%;
-    border-top: 4px solid black;
-    z-index: 3;
-margin-top: 10%;
+.adress{
+    color: white;
+    margin: 0;
+    padding-top: 3px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-#bodyContainer{
-    border-radius: 5px;
-    align-self: center;
-    display: flex;
-    width: 80%;
-    height: inherit;
-    background-color: white;
-    z-index: 2;
+
+
+#whiteBlock a{
+    font-weight: 600;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black;
+    text-decoration: none;
 }
+
 
 #mainContainer{
     display: flex;
+    align-self: center;
+    width: 75%;
+    background-color: white;
     flex-direction: column;
-    width: 100%;
 }
 
-#mainSlogan{
-    align-self: center;
+#topText{
     display: flex;
-    width: 96%;
-   align-items: center;
     flex-direction: column;
+    align-items: center;
 }
 
 #sloganText{
+    text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 2em;
+    font-size: 3em;
     font-weight: 400;
     margin: 0;
-    padding-top: 5%;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+    background-color: rgba(167, 167, 167, 0.479);
+    backdrop-filter: blur(5px);
 }
+
+
+
 
 #underSlogan{
+    width: 60%;
     text-align: center;
-    display: flex;
-    width: 70%;
-    margin-top: 1%;
     color: gray;
     font-family: "Poppins", sans-serif;
+    margin-top: 0.5%;
+    text-shadow: 1px 1px 1px black;
+    letter-spacing: 0.5px;
 }
 
-#sloganStrip{
-    border-radius: 20%;
-    width: 70%;
-    height: 3px;
-    margin-top: 3%;
-}
 
-#fixedImgCont{
-    display: flex;
-    min-height: 40%;
-    width: 100%;
-}
 
-#fixedCont{
-    display: flex;
-    width: inherit
-
+#fixedBox{
+    border-radius: 3px;
+    cursor: default;
+border-bottom: 1px solid grey;
 }
 
 #fixedImg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url('../assets/img/clean.jpg');
-width: inherit;
-
+    width: 100%;
+    min-height: 500px;
 background-attachment: fixed;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
 }
 
-#fixedText{
-    position: absolute;
+#fixedLogo{
+    text-align: center;
+    color: white;
 }
 
 
+/* Services */
+#servicesContainer{
+    display: flex;
+    flex-direction: column;
+}
+
+#servicesTextContainer{
+    padding-top: 120px;
+    padding-left: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 3em;
+}
+
+#srv{
+    font-size: 1.4em;
+}
+
+#servicesBigBox{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.card {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    color: #2e2d31;
+    background: #131313;
+    overflow: hidden;
+    border-radius: 20px;
+  }
+  
+  .temporary_text {
+    font-weight: bold;
+    font-size: 24px;
+    padding: 6px 12px;
+    background-image: url('../assets/img/clean.jpg');
+    height: 100%;
+
+background-position: center;
+background-size: cover;
+  }
+  
+  .card_title {
+    font-weight: bold;
+  }
+  
+  .card_content {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.222);
+    border-top-left-radius: 20px;
+    transform: translateY(150px);
+    transition: transform .25s;
+  }
+  
+  .card_content::before {
+    content: '';
+    position: absolute;
+    top: -58px;
+    right: -20px;
+    width: 100px;
+    height: 100px;
+    transform: rotate(-190deg);
+    border-radius: 50%;
+  }
+  
+  .card_title {
+    color: #131313;
+    line-height: 15px;
+  }
+  
+  .card_subtitle {
+    display: block;
+    font-size: 12px;
+    margin-bottom: 10px;
+  }
+  
+  .card_description {
+    font-size: 14px;
+    opacity: 0;
+    transition: opacity .5s;
+  }
+
+  .card:hover .card_content::before{
+    box-shadow: inset 48px 48px white;
+  }
+
+  .card:hover{
+    cursor: none;
+   box-shadow: 15px 1px 20px #333;
+  }
+  
+  .card:hover .card_content {
+    background-color: white;
+    transform: translateY(0);
+  }
+  
+  .card:hover .card_description {
+    opacity: 1;
+    transition-delay: .25s;
+  }
+
+
+
+
+  
+  
+  .SocialCard svg {
+    height: 25px;
+  }
+  
+  .SocialCard {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #181818;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    overflow: hidden;
+    height: 50px;
+  }
+  
+  
+  
+  .SocialCard .social-link {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    height: 100%;
+    color: whitesmoke;
+    font-size: 24px;
+    text-decoration: none;
+    transition: 0.1s;
+    border-radius: 50%;
+  }
+  
+  .SocialCard .social-link svg {
+    text-shadow: 1px 1px rgba(31, 74, 121, 0.7);
+    transform: scale(1);
+  }
+  
+  .SocialCard .social-link:hover {
+    background-color: white;
+    transform: scale(1.3);
+  }
+  
+  #inv {
+    filter: invert();
+  }
+
+  #inv:hover{
+    filter: none;
+  }
+  
+  
+  
+  
