--- a/style/css/home.css
+++ b/style/css/home.css
@@ -1,24 +1,33 @@
 body, html{
-    height: 100%;
+
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
+    overflow-y: auto;
 }
+
 
 body{
     display: flex;
-    background: hsla(216, 3%, 70%, 1);
     flex-direction: column;
+    background: rgb(255, 255, 255);
+    overflow-x: hidden;
 
-background: linear-gradient(90deg, hsla(216, 3%, 70%, 1) 0%, hsla(231, 85%, 24%, 1) 92%);
 
-background: -moz-linear-gradient(90deg, hsla(216, 3%, 70%, 1) 0%, hsla(231, 85%, 24%, 1) 92%);
+background: linear-gradient(90deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 92%);
 
-background: -webkit-linear-gradient(90deg, rgb(240, 240, 240) 0%, hsla(231, 85%, 24%, 1) 92%);
+background: -moz-linear-gradient(90deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 92%);
+
+background: -webkit-linear-gradient(90deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 92%);
 }
 
+#global{
+  display: flex;
+  flex-direction: column;
+}
 
 ::-webkit-scrollbar {
+  z-index: 4;
     width: .5em;
   }
    
