--- a/style/css/hm.css
+++ b/style/css/hm.css
@@ -153,10 +153,13 @@ background-size: cover;
 }
 
 #servicesTextContainer{
+    text-shadow: 1px 0px 1px black;
     padding-top: 120px;
     padding-left: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 font-size: 3em;
+color: white;
+background: linear-gradient(0deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 92%);
 }
 
 #srv{
@@ -167,15 +170,14 @@ font-size: 3em;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    padding: 10px;
 }
 
 .card {
     position: relative;
     width: 250px;
     height: 250px;
-    color: #2e2d31;
-    background: #131313;
-    overflow: hidden;
+        overflow: hidden;
     border-radius: 20px;
   }
   
