--- a/style/css/hm.css
+++ b/style/css/hm.css
@@ -70,19 +70,10 @@
 }
 
 
-
-#whiteBlock a{
-    font-weight: 600;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: black;
-    text-decoration: none;
-}
-
-
+/* Main Container */
 #mainContainer{
     display: flex;
     align-self: center;
-    width: 75%;
     background-color: white;
     flex-direction: column;
 }
@@ -171,6 +162,12 @@ background: linear-gradient(0deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 10px;
+}
+
+.box{
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
 }
 
 .card {
