--- a/style/css/hm.css
+++ b/style/css/hm.css
@@ -93,7 +93,7 @@
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-    background-color: rgba(167, 167, 167, 0.479);
+    background-color: #333;
     backdrop-filter: blur(5px);
 }
 
@@ -101,13 +101,13 @@
 
 
 #underSlogan{
-    width: 60%;
     text-align: center;
-    color: gray;
+    color: black;
     font-family: "Poppins", sans-serif;
     margin-top: 0.5%;
-    text-shadow: 1px 1px 1px black;
     letter-spacing: 0.5px;
+border-radius: 10px;
+
 }
 
 
@@ -115,25 +115,25 @@
 #fixedBox{
     border-radius: 3px;
     cursor: default;
-border-bottom: 1px solid grey;
-}
+border-bottom: 1px solid grey;}
 
 #fixedImg{
     display: flex;
-    justify-content: center;
     align-items: center;
     background-image: url('../assets/img/clean.jpg');
     width: 100%;
-    min-height: 500px;
-background-attachment: fixed;
-background-position: center;
+    min-height: 600px;
 background-repeat: no-repeat;
 background-size: cover;
+background-position: center;
 }
 
 #fixedLogo{
     text-align: center;
     color: white;
+    width: 50%;
+    margin-left: 5%;
+
 }
 
 
@@ -151,6 +151,8 @@ background-size: cover;
 font-size: 3em;
 color: white;
 background: linear-gradient(0deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 92%);
+box-shadow:  inset 0px 5px black;
+
 }
 
 #srv{
@@ -162,15 +164,19 @@ background: linear-gradient(0deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 10px;
+    box-shadow:  inset 20x 2px rgba(0, 0, 0, 0.53);
+
 }
 
 .box{
+  height: 250px;
   display: flex;
-  width: 50%;
+  min-width: 50%;
   justify-content: space-evenly;
 }
 
 .card {
+  box-shadow: 5px 5px 5px;
     position: relative;
     width: 250px;
     height: 250px;
@@ -181,12 +187,7 @@ background: linear-gradient(0deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 
   .temporary_text {
     font-weight: bold;
     font-size: 24px;
-    padding: 6px 12px;
-    background-image: url('../assets/img/clean.jpg');
     height: 100%;
-
-background-position: center;
-background-size: cover;
   }
   
   .card_title {
@@ -199,9 +200,10 @@ background-size: cover;
     bottom: 0;
     width: 100%;
     padding: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.222);
+  border: 1px solid;
     border-top-left-radius: 20px;
-    transform: translateY(150px);
+    transform: translateY(120px);
+    background-color: rgba(255, 255, 255, 0.619);
     transition: transform .25s;
   }
   
@@ -213,12 +215,20 @@ background-size: cover;
     width: 100px;
     height: 100px;
     transform: rotate(-190deg);
+
     border-radius: 50%;
   }
   
   .card_title {
     color: #131313;
     line-height: 15px;
+    font-size: large;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  .card_content li{
+    list-style: none;
+    font-size: medium;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   
   .card_subtitle {
@@ -228,23 +238,26 @@ background-size: cover;
   }
   
   .card_description {
+    display: block;
     font-size: 14px;
     opacity: 0;
     transition: opacity .5s;
   }
 
   .card:hover .card_content::before{
-    box-shadow: inset 48px 48px white;
+    box-shadow: inset 48px 48px rgba(255, 255, 255, 0.37);
+    
   }
 
   .card:hover{
     cursor: none;
    box-shadow: 15px 1px 20px #333;
+   border: 1px solid #333;
   }
   
   .card:hover .card_content {
-    background-color: white;
-    transform: translateY(0);
+    border: none;
+        transform: translateY(0);
   }
   
   .card:hover .card_description {
@@ -307,6 +320,8 @@ background-size: cover;
     filter: none;
   }
   
-  
-  
-  
+  .srvImg{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+  }
