--- a/style/css/hm.css
+++ b/style/css/hm.css
@@ -76,12 +76,44 @@
     align-self: center;
     background-color: white;
     flex-direction: column;
+    width: 100%;
 }
 
+
+#fixedBox{
+  border-radius: 3px;
+  cursor: default;
+border-bottom: 1px solid grey;
+height: 600px;
+}
+
+#fixedImgCont{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: inherit;
+}
+
+
+#fixedImg{
+  width: inherit;
+  height: 100%;
+  object-fit: fill;
+}
+
+#fixedLogo{
+  text-align: center;
+  color: white;
+  width: 50%;
+  margin-left: 5%;
+  position: absolute;
+}
+
+
 #topText{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #sloganText{
@@ -93,8 +125,7 @@
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-    background-color: #333;
-    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.692); 
 }
 
 
@@ -110,31 +141,6 @@ border-radius: 10px;
 
 }
 
-
-
-#fixedBox{
-    border-radius: 3px;
-    cursor: default;
-border-bottom: 1px solid grey;}
-
-#fixedImg{
-    display: flex;
-    align-items: center;
-    background-image: url('../assets/img/clean.jpg');
-    width: 100%;
-    min-height: 600px;
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
-}
-
-#fixedLogo{
-    text-align: center;
-    color: white;
-    width: 50%;
-    margin-left: 5%;
-
-}
 
 
 /* Services */
@@ -226,6 +232,9 @@ box-shadow:  inset 0px 5px black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
   .card_content li{
+    display: flex;
+    align-items: center;
+    gap: 5px;
     list-style: none;
     font-size: medium;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -244,6 +253,13 @@ box-shadow:  inset 0px 5px black;
     transition: opacity .5s;
   }
 
+  .dot{
+    height: 6px;
+    width: 6px;
+    background-color: green;
+    border-radius: 50%;
+  }
+
   .card:hover .card_content::before{
     box-shadow: inset 48px 48px rgba(255, 255, 255, 0.37);
     
@@ -253,6 +269,10 @@ box-shadow:  inset 0px 5px black;
     cursor: none;
    box-shadow: 15px 1px 20px #333;
    border: 1px solid #333;
+  }
+
+  .card:hover .srvImg{
+    opacity: .5;
   }
   
   .card:hover .card_content {
