--- a/style/css/pricing.css
+++ b/style/css/pricing.css
@@ -46,6 +46,10 @@
     color: rgb(185, 185, 185);
 }
 
+.price{
+    height: fit-content;
+}
+
 .priceBox{
     display: flex;
 }
@@ -58,3 +62,4 @@
 .priceText{
     color: whitesmoke;
 }
+
