--- a/style/css/services.css
+++ b/style/css/services.css
@@ -2,7 +2,7 @@
 #servicesContainer{
     display: flex;
     flex-direction: column;
-    background: linear-gradient(0deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 92%);
+    background: #333;
 
 }
 
@@ -10,7 +10,7 @@
   display: flex;
   align-items: end;
     text-shadow: 1px 0px 1px black;
-    padding-top: 200px;
+    padding-top: 60px;
 box-shadow:  inset 0px 5px black;
 justify-content: start;
 }
@@ -34,8 +34,6 @@ justify-content: start;
     display: flex;
     flex-wrap: wrap;
     padding: 60px;
-    background-color: #333;
-
 }
 
 .box{
