--- a/style/css/services.css
+++ b/style/css/services.css
@@ -2,15 +2,15 @@
 #servicesContainer{
     display: flex;
     flex-direction: column;
-    background: #333;
+background: url('../assets/img/back.png');
 
 }
 
 #servicesTextContainer{
   display: flex;
   align-items: end;
-    text-shadow: 1px 0px 1px black;
-    padding-top: 60px;
+    text-shadow: 1px -2px 1px black;
+    padding-top: 15px;
 box-shadow:  inset 0px 5px black;
 justify-content: start;
 }
@@ -21,7 +21,7 @@ justify-content: start;
   padding-right: 10px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 4em;
-  color: white;
+  color: rgb(16, 162, 28);
   border-radius: 0 20px 0 0;
 }
 
@@ -40,6 +40,7 @@ justify-content: start;
   height: 300px;
   display: flex;
   justify-content: space-evenly;
+  width: 100%;
 }
 
 .card {
