--- a/style/css/services.css
+++ b/style/css/services.css
@@ -2,7 +2,7 @@
 #servicesContainer{
     display: flex;
     flex-direction: column;
-background: url('../assets/img/back.png');
+background: url('../assets/img/back.jpg');
 
 }
 
@@ -19,10 +19,11 @@ justify-content: start;
 
   padding-left: 10px;
   padding-right: 10px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 4em;
-  color: rgb(16, 162, 28);
-  border-radius: 0 20px 0 0;
+  font-weight: 600;
+  color: #fdfdfe;
+
 }
 
 
