--- a/style/css/map.css
+++ b/style/css/map.css
@@ -9,8 +9,10 @@
     align-items: center;
 }
 
-#map{
+#mapCont{
     display: flex;
+    flex-direction: column;
+    height: fit-content;
 }
 
 #mapText{
@@ -18,3 +20,56 @@
     font-size: 3em;
     font-weight: 500;
 }
+
+.SocialCardMap svg {
+    height: 25px;
+  }
+  
+  .SocialCardMap {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    overflow: hidden;
+    height: 50px;
+    padding-top: 70px;
+    padding-bottom: 20px;
+  }
+
+.SocialCardMap .social-link {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    height: 100%;
+    color: whitesmoke;
+    font-size: 24px;
+    text-decoration: none;
+    transition: 0.1s;
+    border-radius: 50%;
+  }
+  
+  .SocialCardMap .social-link svg {
+
+    transform: scale(1);
+  }
+  
+  .SocialCardMap .social-link:hover {
+    transform: scale(1.3);
+  }
+
+  #invMap{
+    filter: none;
+  }
+
+  #callCont{
+    color: white;
+    font-family: 'Kanit', sans-serif;
+    text-align: center;
+    width: 300px;
+    padding: 20px 10px 20px 10px;
+    background-color: red;
+    border-radius: 150px;
+  }
