--- a/style/css/header.css
+++ b/style/css/header.css
@@ -121,15 +121,48 @@
     filter: none;
   }
   
-  .srvImg{
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-  }
+
 
 
   
   
+/* Empty Strip */
+#empty{
+  width: 100%;
+  height: 100px;
+  background-color: #264094;
+  box-shadow:  inset 0px 5px black;
+  display: flex;
+}
+
+#botStrip{
+  display: flex;
+  padding-bottom: 10px;
+  width: 100%;
+  height: 100px;
+  background-color: #33333393;
+  box-shadow: inset 0 0 2000px rgba(14, 14, 14, 0.5);
+    align-items: flex-end;
+}
+
+#servicesTextContainer{
+  display: flex;
+  align-items: end;
+    text-shadow: 1px -2px 1px black;
+
+justify-content: start;
+}
+
+#servicesText{
+
+  padding-left: 10px;
+  padding-right: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 4em;
+  font-weight: 600;
+  color: #fdfdfe;
+
+}
 
 
 
