--- a/style/css/pricing.css
+++ b/style/css/pricing.css
@@ -38,12 +38,11 @@
 
 .servPriceBox{
     display: flex;
-    flex-direction: column;
-    width: 50%;
-}
+    width: 100%;
+margin-top: 30px;}
 
 .servPriceBox li{
-    color: rgb(185, 185, 185);
+    color: black;
 }
 
 .price{
@@ -52,6 +51,7 @@
 
 .priceBox{
     display: flex;
+    flex-direction: column;
 }
 
 .priceLogo{
