--- a/style/css/pricing.css
+++ b/style/css/pricing.css
@@ -39,10 +39,14 @@
 .servPriceBox{
     display: flex;
     width: 100%;
-margin-top: 30px;}
+margin-top: 30px;
+margin-left: 90px;
+}
 
 .servPriceBox li{
-    color: black;
+    margin-top: 9px;
+    font-family: 'Quicksand';
+    color: #47d9aa;
 }
 
 .price{
@@ -55,11 +59,16 @@ margin-top: 30px;}
 }
 
 .priceLogo{
+    font-family: 'Roboto';
     color: white;
-    font-size: 1.3em;
+    font-size: 1.5em;
 }
 
 .priceText{
+    font-family: sans-serif, monospace;
     color: whitesmoke;
+    font-size: 1.2;
+    width: 70%;
 }
+
 
