--- a/style/css/footer.css
+++ b/style/css/footer.css
@@ -1,12 +1,22 @@
 
-
-#footer{
+#footerCont{
     display: flex;
+    flex-direction: column;
     width: 100%;
     background-color: #333333;
     box-shadow:  inset 0px 5px rgb(14, 190, 81);
-    height: 100px;
-    justify-content: space-evenly;
+    align-items: center;
+}
+
+#footerCont span{
+    color: white;
+}
+
+#footer{
+    display: flex;
+    width:25%;
+    margin-top: 20px;
+        justify-content: space-evenly;
     align-items: center;
 }
 
@@ -14,4 +24,9 @@
     color: beige;
     font-family: 'Roboto', sans-serif;
     font-size: 1.2em;
+}
+
+#copyRight{
+    color: white;
+    width: fit-content;
 }
