--- a/style/css/home.css
+++ b/style/css/home.css
@@ -28,16 +28,16 @@ background: -webkit-linear-gradient(90deg, rgb(255, 255, 255) 0%, hsla(231, 85%,
 
 ::-webkit-scrollbar {
   z-index: 4;
-    width: .5em;
+    width: .9em;
   }
    
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px #333;
+    box-shadow: inset 0 0 20px #333;
   }
    
   ::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
+    background-color: white;
+    outline: 1px solid black;
     border-radius: 50px;
 
   }
