--- a/style/css/header.css
+++ b/style/css/header.css
@@ -203,7 +203,6 @@ height: 600px;
 #fixedLogo{
   text-align: center;
   color: white;
-  width: 56%;
   margin-left: 2%;
   position: absolute;
 }
@@ -213,6 +212,7 @@ height: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 60%;
 }
 
 .loader {
@@ -230,6 +230,14 @@ height: 600px;
   border: 1px solid rgba(255, 255, 255, 0.222);
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
+}
+
+#line{
+  display: flex;
+}
+
+#phoneText{
+  display: none;
 }
 
 .loader p{
