--- a/style/css/header.css
+++ b/style/css/header.css
@@ -230,6 +230,7 @@ height: 600px;
   border: 1px solid rgba(255, 255, 255, 0.222);
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
+  margin-bottom: 20px;
 }
 
 #line{
@@ -304,11 +305,16 @@ height: 600px;
 
 
 #underSlogan{
+  margin-top: 1000px;
     text-align: center;
-    color: black;
+    color: blue;
+    padding: 0 15px 0 15px;
+    background-color: rgba(255, 255, 255, 0.356);
     font-family: "Poppins", sans-serif;
     margin-top: 0.5%;
     letter-spacing: 0.5px;
 border-radius: 10px;
+width:90%;
+font-size: 1.4em;
 
 }
