--- a/style/css/mediaResponse.css
+++ b/style/css/mediaResponse.css
@@ -3,7 +3,9 @@
 @media only screen and (max-width: 1820px) {
 
 
-
+#underSlogan{
+  font-size: 1.2em;
+}
   #fixedImg {
        object-fit: cover;
     }
