--- a/style/css/header.css
+++ b/style/css/header.css
@@ -201,6 +201,7 @@ height: 600px;
 
 
 #fixedLogo{
+  display: flex;
   text-align: center;
   color: white;
   margin-left: 2%;
@@ -212,7 +213,6 @@ height: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
 }
 
 .loader {
@@ -307,14 +307,14 @@ height: 600px;
 #underSlogan{
   margin-top: 1000px;
     text-align: center;
-    color: blue;
+    color: black;
     padding: 0 15px 0 15px;
     background-color: rgba(255, 255, 255, 0.356);
-    font-family: "Poppins", sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin-top: 0.5%;
     letter-spacing: 0.5px;
 border-radius: 10px;
-width:90%;
+width:65%;
 font-size: 1.4em;
 
 }
