--- a/style/css/resize/headerResize.css
+++ b/style/css/resize/headerResize.css
@@ -24,9 +24,6 @@
     justify-content: center;
 }
 
-#topText{
-    width: 90%;
-}
 
 
 #phoneText{
@@ -50,4 +47,11 @@ font-size: 1.8em;
         font-size: 0.8em;
     }
 
+}
+
+@media only screen and (max-width: 1130px)and (min-width: 734px) 
+{
+    #topText{
+        width: 70%;
+    }
 }
