--- a/style/css/footer.css
+++ b/style/css/footer.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     width: 100%;
     background-color: #333333;
-    box-shadow:  inset 0px 5px rgb(14, 190, 81);
+    box-shadow:  inset 0px 5px rgb(64 99 185);
     align-items: center;
 }
 
