--- a/style/css/resize/bodyResize.css
+++ b/style/css/resize/bodyResize.css
@@ -10,7 +10,9 @@
     gap: 60px;
 }
 
-
+.priceBox{
+    height: auto;
+}
 
 #servicesText{
     font-size: 3em;
@@ -19,7 +21,6 @@
 .card{
     min-width: 150px;
     max-width: 150px;
-    height: auto;
 }
 
 
