--- a/style/css/resize/bodyResize.css
+++ b/style/css/resize/bodyResize.css
@@ -6,13 +6,14 @@
     padding: 15px;
 }
 
-#servicesContainer{
-    gap: 60px;
+
+.servPriceBox
+{
+    flex-direction: column;
+    margin-left: 20px;
+    gap: 100px;
 }
 
-.priceBox{
-    height: auto;
-}
 
 #servicesText{
     font-size: 3em;
@@ -21,8 +22,17 @@
 .card{
     min-width: 150px;
     max-width: 150px;
+    height: auto;
+    margin-bottom: 80px;
 }
 
+#comCard{
+    width: 100px;
+}
+
+#gutCard{
+    width: 100px;
+}
 
 .priceText{
     display: none;
@@ -81,7 +91,7 @@
     }
 
 .servPriceBox{
-    gap:100px;
+    gap:35px;
 }
 
     #footer{
