--- a/style/css/pricing.css
+++ b/style/css/pricing.css
@@ -40,7 +40,7 @@
     display: flex;
     width: 100%;
 margin-top: 30px;
-padding: 0 10px 0 10px;
+padding: 50px 10px 50px 10px;
 }
 
 .servPriceBox li{
