--- a/style/css/resize/headerResize.css
+++ b/style/css/resize/headerResize.css
@@ -3,7 +3,7 @@
 
 .loader{
     flex-direction: column;
-    font-size: medium;
+    font-size: small;
     height: fit-content;
 }
 
@@ -35,10 +35,6 @@ font-size: 1.8em;
     padding-bottom: 1px;
 }
 
-
-    #pcText{
-        display: none;
-      }    
 
     #phoneContainer{
         display: none;
