--- a/style/css/footer.css
+++ b/style/css/footer.css
@@ -14,8 +14,9 @@
 
 #footer{
     display: flex;
-    width:25%;
+    width:fit-content;
     margin-top: 20px;
+    gap: 7px;
         justify-content: space-evenly;
     align-items: center;
 }
@@ -29,4 +30,5 @@
 #copyRight{
     color: white;
     width: fit-content;
+    margin-top: 4px;
 }
