--- a/style/css/home.css
+++ b/style/css/home.css
@@ -21,6 +21,36 @@ background: -moz-linear-gradient(90deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24
 background: -webkit-linear-gradient(90deg, rgb(255, 255, 255) 0%, hsla(231, 85%, 24%, 1) 92%);
 }
 
+.policyCont{
+  border-top: 1px solid black;
+  padding: 20px 0px 20px 20px;
+  background-color: rgba(255, 255, 255, 0.615);
+  width: 90%;
+  align-self: center;
+  border-radius: 5px;
+}
+
+#links{
+  display: inline;
+  gap: 7px;
+  padding: 10px;
+}
+
+#links span{
+  color: white;
+}
+
+#links a{
+  cursor: pointer;
+  position: relative;
+  z-index: 11;
+  color: white;
+}
+
+#links a:hover{
+  text-decoration: underline;
+}
+
 #global{
   display: flex;
   flex-direction: column;
