--- a/style/css/header.css
+++ b/style/css/header.css
@@ -25,7 +25,16 @@
   cursor: pointer;
 }
 
- 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+} 
+
+
  #topBarPanel{
      display: flex;
      width: 95%;
